# pg_sdl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  idea.yaml  test.yaml
MyPygameLibrary/: App.py  Camera.py  Inputs.py  UI_elements.py  World.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  TODO.md
examples/: async.rs  basic.rs  basic2.rs  fourmis.rs  main.rs  spring_test.rs  text_input.rs
examples/benday/: main.rs
examples/benday/blocs/: containers.rs  mod.rs  old_bloc.rs  print.rs  variable_assignment.rs  while.rs  widgets.rs
examples/physics_engine/: constrains.rs  force_generators.rs  linear_alogithmes.rs  main.rs  particle.rs
examples/spring/: constrains.rs  force_generators.rs  main.rs
examples/spring_test/: physics_objects.rs
macros/: Cargo.toml
macros/src/: lib.rs
pg_sdl/: Cargo.toml
pg_sdl/src/: canvas.rs  color.rs  draw_circle.rs  lib.rs  main.rs  vector2.rs
pg_sdl/src/app/: mod.rs
pg_sdl/src/blocs/: mod.rs
pg_sdl/src/camera/: mod.rs
pg_sdl/src/input/: key_state.rs  mod.rs  mouse.rs
pg_sdl/src/style/: mod.rs
pg_sdl/src/text/: fonts_init.rs  mod.rs  q_draw_text.rs  text.rs
pg_sdl/src/widgets/: button.rs  mod.rs  slider.rs  switch.rs  text_input.rs
src/: canvas.rs  draw_circle.rs  draw_text.rs  lib.rs  macros.rs  main.rs
src/app/: mod.rs
src/input/: key_state.rs  mod.rs
tester/: Cargo.toml
tester/src/: main.rs
