[package]
name = "pg_sdl"
license = "MIT"
edition = "2021"
version = "0.1.0"
resolver = "2"
description = "A SDL2-superset library for easy game or application development."
authors = [
	"Arnaud Jungo <arnolo.jo@gmail.com>",
	"Quentin Jungo <quentin.jungo@gmail.com>",
]
categories = ["rendering", "api-bindings", "game-engines", "multimedia", "gui"]
keywords = ["SDL", "gui", "graphics", "superset", "engine"]
# readme = "README.md"
# repository = "https://github.com/Rust-SDL2/rust-sdl2"
# documentation = "https://rust-sdl2.github.io/rust-sdl2/sdl2/"

[lib]
path = "pg_sdl/src/lib.rs"

[dependencies]
sdl2 = { version = "0.35.2", features = ["ttf", "gfx"] }
itertools = "0.10.5"
as-any = "0.3.0"

[[bin]]
name = "pg_sdl2"
path = "examples/basic.rs"

# [[example]]
# name = "basic"

# [[example]]
# name = "main"
